5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4328/executions/1642_651.log
== TEST (2019-04-22 13:10:08) 
-- CODE:

altura = int(input())
sexo = int(input())

if (sexo == M)
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 5
    if (sexo == M)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:14:03) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == M)
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 5
    if (sexo == M)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:15:18) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == "M")
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 5
    if (sexo == "M")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:19:15) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == "M")
	print((72.7 * altura) - 58)
else (sexo == "F") :
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 5
    if (sexo == "M")
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:20:35) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == M)
	print((72.7 * altura) - 58)
else (sexo == F):
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 5
    if (sexo == M)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:20:48) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == M):
	print((72.7 * altura) - 58)
else (sexo == F):
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
File "XXXX", line 7
    else (sexo == F):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:20:58) 
-- CODE:

sexo = int(input())
altura = int(input())

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    sexo = int(input())
ValueError: invalid literal for int() with base 10: '1.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:21:24) 
-- CODE:

altura = int(input())
sexo = int(input())

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    altura = int(input())
ValueError: invalid literal for int() with base 10: '1.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:22:22) 
-- CODE:

altura = int(input())
sexo = input()

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    altura = int(input())
ValueError: invalid literal for int() with base 10: '1.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:22:27) 
-- CODE:

altura = int(input())
sexo = input ()

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    altura = int(input())
ValueError: invalid literal for int() with base 10: '1.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:22:33) 
-- CODE:

altura = int(input())
sexo = input()

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    altura = int(input())
ValueError: invalid literal for int() with base 10: '1.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:23:08) 
-- CODE:

altura = float(input())
sexo = input()

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sexo == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 13:23:49) 
-- CODE:

altura = float(input())
sexo = input()

if (sexo == M):
	print((72.7 * altura) - 58)
else:
	print ((62.1 * altura) - 44.7)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (sexo == M):
NameError: name 'M' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
